; ModuleID = '/home/carl/AnghaBench/lz4/programs/extr_datagen.c_RDG_genChar.c'
source_filename = "/home/carl/AnghaBench/lz4/programs/extr_datagen.c_RDG_genChar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LTMASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i32*)* @RDG_genChar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RDG_genChar(i64* %0, i32* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i64*, i64** %3, align 8
  %7 = call i64 @RDG_rand(i64* %6)
  %8 = load i64, i64* @LTMASK, align 8
  %9 = and i64 %7, %8
  store i64 %9, i64* %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i64, i64* %5, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  %13 = load i32, i32* %12, align 4
  ret i32 %13
}

declare dso_local i64 @RDG_rand(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
